--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ venv.bak/
 # Project specific
 *.env
 *.log
+bot.log*
 .coverage
-htmlcov/ 
+htmlcov/
+processed_tweets.json
+@processed_tweets.json 
