--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ openai = "^1.57.0"
 python-dotenv = "^1.0.1"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.10.0"
+isort = "^5.13.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
